tests/baselines/reference/checkJsdocReturnTag2.errors.txt
error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
returns.js(6,5): error TS2322: Type 'number' is not assignable to type 'string'.
returns.js(13,12): error TS2872: This kind of expression is always truthy.


!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== returns.js (2 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
     */
    function f() {
        return 5;
        ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    }
    
    /**
     * @returns {string | number} This comment is not currently exposed
     */
    function f1() {
        return 5 || true;
               ~
!!! error TS2872: This kind of expression is always truthy.
    }
    